# phantom_snare

./: .gitignore  README.md  TESTING.md  config.example.json  main.py  phantom_snare_evidence.db-shm  phantom_snare_evidence.db-wal  pubspec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sentinel_privacy/: MainActivity.kt
lib/: app.dart  main.dart
lib/models/: exfiltration_attempt.dart  module_status.dart  network_entry.dart  security_alert.dart  spoofing_event.dart  suspicious_app.dart
lib/screens/: deceptor_screen.dart  observer_screen.dart  phantom_snare_screen.dart  shield_screen.dart  vault_screen.dart
lib/services/: deceptor_service.dart  observer_service.dart  phantom_snare_service.dart  shield_service.dart  vault_service.dart
lib/utils/: app_theme.dart
lib/widgets/: alert_feed.dart  coordinate_display.dart  module_card.dart  section_header.dart  stats_row.dart
phantom_snare/: __init__.py  alerts.py  config.py  database.py  deceptor.py  logger.py  observer.py  shield.py  snare.py  sqlite_db.py  vault.py
phantom_snare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
phantom_snare/templates/: dashboard.html
test/: safety_test.dart  sentinel_privacy_test.dart  stability_test.dart  widget_test.dart
tests/: test_config.py  test_database.py  test_deceptor.py  test_logger.py  test_observer.py  test_shield.py  test_snare.py  test_sqlite_db.py  test_vault.py
