[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom_snare"
version = "0.1.0"
description = "A lightweight network honeypot for capturing intrusion attempts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "HAMMAD-4" }]
keywords = ["honeypot", "security", "intrusion-detection", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["mysql-connector-python>=9.3"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
phantom_snare = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phantom_snare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
